<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Habit Tracker</string>

    <string name="action_settings">Settings</string>

    <!-- Title for the activity to add a new activity [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_activity">Add an activity</string>

    <!-- Label for editor menu option to save an activity and leave the editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for Main category of attributes for the activity [CHAR LIMIT=30] -->
    <string name="category_main">Main</string>

    <!-- Label for time-related information for the activity [CHAR LIMIT=30] -->
    <string name="category_time">Time</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_place">Place</string>

    <!-- Text hint for description field in the editor [CHAR LIMIT=30] -->
    <string name="hint_activity_description">Description</string>

    <!-- Text hint for duration field in the editor [CHAR LIMIT=30] -->
    <string name="hint_activity_duration">Duration</string>

    <!-- Units for duration of an activity (minutes) [CHAR LIMIT=5] -->
    <string name="unit_activity_duration">min</string>

    <!-- Text hint for place field in the editor [CHAR LIMIT=30] -->
    <string name="hint_activity_place">Location</string>

    <!-- Label for dropdown menu option if the activity's category is health [CHAR LIMIT=20] -->
    <string name="category_health">Health</string>

    <!-- Label for dropdown menu option if the activity's category is spiritual [CHAR LIMIT=20] -->
    <string name="category_spiritual">Spiritual</string>

    <!-- Label for dropdown menu option if the activity's category is intellectual [CHAR LIMIT=20] -->
    <string name="category_intellectual">Intellectual</string>

    <!-- Label for dropdown menu option if the activity's category is manual [CHAR LIMIT=20] -->
    <string name="category_manual">Manual</string>

    <!-- Label for dropdown menu option if the activity's category is social [CHAR LIMIT=20] -->
    <string name="category_social">Social</string>

    <!-- Label for dropdown menu option if the activity's moment is dawn [CHAR LIMIT=20] -->
    <string name="moment_dawn">Dawn</string>

    <!-- Label for dropdown menu option if the activity's moment is morning [CHAR LIMIT=20] -->
    <string name="moment_morning">Morning</string>

    <!-- Label for dropdown menu option if the activity's moment is afternoon [CHAR LIMIT=20] -->
    <string name="moment_afternoon">Afternoon</string>

    <!-- Label for dropdown menu option if the activity's moment is evening [CHAR LIMIT=20] -->
    <string name="moment_evening">Evening</string>

    <!-- Label for dropdown menu option if the activity's moment is night [CHAR LIMIT=20] -->
    <string name="moment_night">Night</string>


    <string name="pie_chart">Pie Chart</string>
    <string name="column_chart">Column Chart</string>
    <string name="line_chart">Line Chart</string>
    <string name="venn_diagram">Venn Diagram</string>
    <string name="heat_map_chart">Heat Map Chart</string>
    <string name="tag_cloud">Tag Cloud</string>
    <string name="waterfall_chart">Waterfall Chart</string>
    <string name="tree_map_chart">Tree Map Chart</string>
    <string name="circular_gauge">Circular Gauge</string>
    <string name="thermometer">Thermometer</string>
    <string name="linear_color_scale">Linear Color Scale</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="scatter_chart">Scatter Chart</string>
    <string name="resource_chart">Resource Chart</string>
    <string name="radar_chart">Radar Chart</string>
    <string name="polar_chart">Polar Chart</string>
    <string name="range_chart">Range Chart</string>
    <string name="vertical_chart">Vertical Chart</string>
    <string name="funnel_chart">Funnel Chart</string>
    <string name="pert_chart">Pert Chart</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="combined_chart">Combined Chart</string>
    <string name="bubble_chart">Bubble Chart</string>
    <string name="pareto_chart">Pareto Chart</string>
    <string name="pyramid_chart">Pyramid Chart</string>
    <string name="area_chart">Area Chart</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="box_chart">Box Chart</string>
    <string name="mosaic_chart">Mosaic Chart</string>
    <string name="mekko_chart">Mekko Chart</string>
    <string name="bar3d_chart">3D Bar Chart</string>
    <string name="column3d_chart">3D Column Chart</string>
    <string name="area3d_chart">3D Area Chart</string>
    <string name="hilo_chart">Hilo Chart</string>
    <string name="ohlc_chart">OHLC Chart</string>
    <string name="quadrant_chart">Quadrant Chart</string>
    <string name="bubble_map">Bubble Map</string>
    <string name="choropleth_map">Choropleth Map</string>
    <string name="point_map">Point Map</string>
    <string name="connector_map">Connector Map</string>
    <string name="sunburst_chart">Sunburst Chart</string>
    <string name="two_pies_one_column">Two pies one column</string>
    <string name="title_activity_menu_master">MenuActivityMaster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main2">MainActivity2</string>


    <!-- Name for the application [CHAR LIMIT=12] -->
</resources>